introducing main layout above GameView.